--- a/birthday/Dockerfile
+++ b/birthday/Dockerfile
@@ -1,8 +1,11 @@
 # Use the official Node.js image as the base
-FROM node:latest
+FROM node:alpine
 
 # Set the working directory inside the container
 WORKDIR /app
+
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /app/node_modules/.bin:$PATH
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
@@ -13,11 +16,8 @@ RUN npm install
 # Copy the entire app directory
 COPY . .
 
-# Build the app
-RUN npm run build
-
 # Expose port 3000
 EXPOSE 3000
 
-# Set the runtime command
-CMD ["npm", "start"]
+# start the app
+CMD ["npm", "run", "dev"]
